@@ -1,3 +1,9 @@
+2010-10-23  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* config/libbid/bid_gcc_intrinsics.h (LIBGCC2_WORDS_BIG_ENDIAN):
+	Delete.
+	(LIBGCC2_FLOAT_WORDS_BIG_ENDIAN): Test __BYTE_ORDER__.
+
 2010-10-14  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* config/arm/bpabi.h: New file.
