@@ -1,3 +1,8 @@
+2010-10-23  Nathan Froyd  <froydnj@codesourcery.com>
+
+	* dconfig.h (LIBGCC2_WORDS_BIG_ENDIAN): Delete.
+	(LIBGCC2_FLOAT_WORDS_BIG_ENDIAN): Test __BYTE_ORDER__.
+
 2010-09-10  Kai Tietz  <kai.tietz@onevision.com>
 
        * configure: Regenerated.
